--- a/style.css
+++ b/style.css
@@ -8,10 +8,15 @@ header
     width: 30%;
 }
 
+.bootstrap, .about
+{
+    color: white;
+}
+
 /*! ##### SECTION 1 ##### */
 .avatar
 {
-    width: 50%;
+    width: 25%;
 }
 h1
 {
@@ -23,3 +28,16 @@ h1
 }
 
 /*! ##### SECTION 2 ##### */
+/*! ##### SECTION 3 ##### */
+.about p 
+{
+    width: 60%;
+    font-weight: bold;
+}
+
+/*! ##### FOOTER ##### */
+.bg-dark
+{
+    color: white;
+    font-weight: bold;
+}
