padding added & details

--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+/*! ##### GENERICS ##### */
+h1
+{
+    font-weight: bold;
+}
+.star
+{
+    font-size: 2rem;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+/*! ##### BACKGROUND ##### */
+.bg-dark
+{
+    color: white;
+    font-weight: bold;
+}
+.bg-watergreen
+{
+    background-color: #7FFFD4;
+    color: white;
+}
+
+/*! ##### HEADER & JUMBO ##### */
 header
 {
     height: 100px;
@@ -8,36 +32,47 @@ header
     width: 30%;
 }
 
-.bootstrap, .about
-{
-    color: white;
-}
 
-/*! ##### SECTION 1 ##### */
+
 .avatar
 {
-    width: 25%;
+    width: 60%;
 }
-h1
+.container img
 {
-    font-weight: bold;
-}
-.star
-{
-    font-size: 2rem;
+    padding: 40px;
 }
 
-/*! ##### SECTION 2 ##### */
-/*! ##### SECTION 3 ##### */
+/*! ##### ABOUT ##### */
 .about p 
 {
     width: 60%;
     font-weight: bold;
+    font-size: 0.5rem;
 }
-
-/*! ##### FOOTER ##### */
-.bg-dark
+.about .btn 
 {
-    color: white;
+    font-size: 0.5rem;
+}
+/*! ##### LOCATION ##### */
+.location .container .row .col-12
+{
+    margin-bottom: 30px;
+}
+.location .container .row .col-12 *
+{
     font-weight: bold;
+    font-size: 0.8rem;
+}
+.location .container .row .col-12 i
+{
+    font-size: 2rem;
+    margin: 0 5px;
+    cursor: pointer;
+}
+/*! ##### FOOTER ##### */
+footer p 
+{
+
+    font-size: 0.5rem;
 }
