--- a/style.css
+++ b/style.css
@@ -42,6 +42,17 @@ h1
 {
     font-size: 0.5rem;
 }
+.form-control
+{
+    display: inline-block;
+    width: 90%;
+    border: 1px solid white;
+    border-bottom: 1px solid lightgray;
+}
+.form-control::placeholder
+{
+    color: black;
+}
 /*! ##### LOCATION ##### */
 .location .container .row .col-12
 {
@@ -51,6 +62,7 @@ h1
 {
     font-weight: bold;
     font-size: 0.8rem;
+    text-decoration: none;
 }
 .location .container .row .col-12 i
 {
