--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ h1
 .form-control
 {
     display: inline-block;
-    width: 90%;
     border: 1px solid white;
     border-bottom: 2px solid ghostwhite;
+    margin-bottom: 10px;
 }
 .form-control::placeholder
 {
